--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <a href="https://www.tiktok.com/@mumble.games.official?_t=ZS-8uIM7Iq7oiS&_r=1" target="_blank">
                 <img id="tiktok" src="Images/tiktok.png" alt="tiktok" width="40">
             </a>
+            <a href="https://discord.gg/jK5MaH2H" target="_blank">
+                <img id="discord" src="Images/discord.png" alt="discrod" width="40">
+            </a>
         </p>
         <img id="nerdo" src="Images/Nerdo.png" alt="Nerdo" width="175" class="Nerdo">
         <img id="finger" src="Images/finger.png" alt="Finger" width="175" class="Finger">
